# vcdiff-python

./: .gitmodules  CHANGELOG.md  CLAUDE.md  FUZZING.md  README.md  fuzz_atheris.py  fuzz_simple.py  pyproject.toml  setup.py
.github/workflows/: check.yml  fuzz.yml  release.yml
fuzz_findings/case_0001_mutated_varint_run_128_expansion_6.1x/: description.txt
tests/: test_fuzz_hypothesis.py  test_vcdiff.py
vcdiff/: cli.py  varint.py
vcdiff_decoder/: __init__.py
